--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -50,6 +50,7 @@
 //-- MENU OVERLAY -->
 //------------------------------------------------->
 
+// Menu Positioning
 .menu {
   position: fixed;
   top: 0;
@@ -122,12 +123,9 @@
     &.current > a {
       color: $secondary-color;
 
-      &:before {
-        content: '<';
-      }
-
+      &:before,
       &:after {
-        content: '>';
+        content: '|';
       }
     }
   }
